--- a/src/main/resources/assets/drowneddepths/lang/en_us.json
+++ b/src/main/resources/assets/drowneddepths/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.drowneddepths.test_custom_item": "Test Custom Item",
 
   "block.drowneddepths.test_block": "Test Block",
+  "block.drowneddepths.test_custom_block": "Test Custom Block",
 
   "itemgroup.drowneddepths.drowned_depths_group": "Drowned Depths"
 }
